# Design-Patterns

./: README.md
Strategy Pattern/: CMakeLists.txt  Quack.cpp  Quack.h  decoyDuck.cpp  decoyDuck.h  duck.cpp  duck.h  flyBehavior.cpp  flyBehavior.h  flyNoWay.cpp  flyNoWay.h  flyRocketPowered.cpp  flyRocketPowered.h  flyWithWings.cpp  flyWithWings.h  main.cpp  mallardDuck.cpp  mallardDuck.h  modelDuck.cpp  modelDuck.h  muteQuack.cpp  muteQuack.h  quackBehavior.cpp  quackBehavior.h  redHeadDuck.cpp  redHeadDuck.h  squeak.cpp  squeak.h
